V1.1.2/README.md
# Rain

面向 Windows 的本地桌面音乐播放器。界面采用 Apple Music 式的资料库、常驻播放条和沉浸歌词布局，并根据当前封面四周的实际颜色生成动态窗口光晕。

## 功能

- ChKSz API Key 通过 Windows `safeStorage` 加密保存在当前用户目录
- 网易云音乐、QQ 音乐、酷狗音乐搜索源切换
- 网易云 `standard` 至 `jymaster`、QQ/酷狗 `128k` 至 `master` 音质切换
- 歌词页音质菜单固定从按钮正下方向下展开，所有可用档位均可见
- LRC 原文、翻译、罗马音合并与逐行同步滚动
- 封面四边取色，驱动窗口背景及播放器边缘动态色彩
- 导入并播放本地音频文件
- 本地歌曲自动读取真实码率、格式与采样率；缺少码率元数据时才显示“本地原声”
- 关闭时可选择彻底退出或最小化到系统托盘，并可在设置中更改偏好
- 单实例启动、启动显示兜底和安装版缓存目录，避免重复双击产生多个常驻主实例
- 歌词逐行同步滚动，当前行唱完后平滑滚到下一行
- 全斜线 Rain 品牌图标，并同步用于窗口、任务栏、托盘和播放器界面
- 空格播放/暂停，Alt+方向键切歌和调节音量；设置页支持录制、保存与恢复自定义组合键
- 系统减少动态效果、减少透明度和高对比度辅助设置

## 开发

```powershell
pnpm install
pnpm dev
```

## 生成 Windows 安装版

```powershell
pnpm dist:win
```

输出位于 `release` 文件夹，生成 NSIS 安装包。安装后会在安装目录创建 `RainCache` 缓存文件夹，并可在设置中更改缓存路径。

> API Key 不会写入项目、日志或公开 URL。业务请求从 Electron 主进程发出，并遵循接口错误状态与请求频率限制。
